--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+code_test.js
+
 # Created by https://www.gitignore.io/api/java,eclipse
 # Edit at https://www.gitignore.io/?templates=java,eclipse
 
