--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: algo-wiki/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - run: npm install
       - run: npm run build
@@ -31,4 +31,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          publish_dir: algo-wiki/docs/.vitepress/dist
+          publish_dir: docs/.vitepress/dist
