--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           cache-dependency-path: package-lock.json
 
       - run: npm install
-      - run: npm run build
+      - run: npm run docs:build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
